make-a-wish-salesforce/src/objects/VisualAntidote__Form_Page__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__FieldsObjectXml__c</fullName>
        <label>FieldsObjectXml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fields_xml__c</fullName>
        <label>Fields xml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Form Pages</relationshipLabel>
        <relationshipName>Form_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Html__c</fullName>
        <label>Html</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Page_Order__c</fullName>
        <label>Page Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Page_Title__c</fullName>
        <label>Page Title</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Form Page</label>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__All_Form_Pages</fullName>
        <columns>NAME</columns>
        <columns>VisualAntidote__Form__c</columns>
        <columns>VisualAntidote__Is_Hidden__c</columns>
        <columns>VisualAntidote__Page_Order__c</columns>
        <columns>VisualAntidote__Page_Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Form Pages</label>
    </listViews>
    <nameField>
        <displayFormat>FFP-{000000}</displayFormat>
        <label>Form Page ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>